--- a/help/css/style_each.css
+++ b/help/css/style_each.css
@@ -5,7 +5,7 @@
 .doc_content_li_01{
 	list-style-type: disc;
 	height: auto;
-	margin-bottom: 4em;
+	margin-bottom: auto;
 }
 .doc_content_ul_02{
 	margin-top: 1em;
@@ -13,7 +13,7 @@
 }
 .doc_content_li_02{
 	list-style-type: square;
-	font-size: medium;
+	font-size: 80%;
 	height: 2em;
 }
 
@@ -60,14 +60,14 @@
     padding: 0em 0em;
     display: block;
     position: relative;
-    font-size: 90%;
+    font-size: 80%;
 }
 .menu_spread_a{
 	min-height: 2em;
     padding: 0em 0em 0em 2em;
     display: block;
     position: relative;
-    font-size: 90%;
+    font-size: 60%;
 }
 .menu_spread_a:link{
 	color: black;
@@ -141,7 +141,7 @@
     padding: 0em 0em 0em 2em;
     display: block;
     position: relative;
-    font-size: 90%;
+    font-size: 60%;
 	background: rgba(140,140,140,1.00);
 	color: black;
 }
